--- a/indevs.css
+++ b/indevs.css
@@ -3,7 +3,6 @@
   --siteWidth: 1000px;
   --toppadding: 2px;
 
-  /* Light */
   --backgroundCol: #ffffff;
   --textCol: #262626;
   --yellowCol: #fff505;
@@ -21,31 +20,9 @@
   margin: auto;
   line-height: 1.4;
   padding: 8px;
-  font-size: 20px;
   word-wrap: normal;
   font-family: mainFont;
 }
-
-.copyright::before
-{
-  content: "© 2014-2024 Jack Vania";
-}
-
-.navdivider::before
-{
-  content: " /";
-}
-
-.content
-{
-  padding-top: var(--toppadding);
-}
-
-/* .topnav
-{
-  font-weight: bold;
-  padding-bottom: 16px;
-} */
 
 @font-face
 {
@@ -57,18 +34,6 @@ body
 {
   background: var(--backgroundCol);
   color: var(--textCol);
-}
-
-h1
-{
-  font-size: 68px;
-  margin-bottom: 0px;
-}
-
-h2
-{
-  font-size: 24px;
-  margin-bottom: 0px;
 }
 
 p
@@ -123,23 +88,12 @@ a:hover
   font-size: 72px;
   line-height: 1.4;
 
-  padding-bottom: 32px;
-  padding-top: 32px;
+  padding-bottom: 16px;
+  padding-top: 16px;
   padding-left: 8px;
   padding-right: 8px;
 
   /* padding: 64px; */
-  background-color: var(--textCol);
-}
-
-.findUs
-{
-  text-align: center;
-  line-height: 1.4;
-  font-size: 72px;
-  font-weight: bold;
-
-  padding: 32px;
   background-color: var(--textCol);
 }
 
@@ -149,44 +103,13 @@ maintitle
   font-weight:bold;
 }
 
-a.bnb:link
-{
-  color: var(--bnbLink);
-  background-color: transparent;
-  text-decoration: none;
-}
-
-a.bnb:visited
-{
-  color: var(--bnbLink);
-  background-color: transparent;
-  text-decoration: none;
-}
-
-a.bnb:hover
-{
-  color: var(--bnbLink);
-  background-color: transparent;
-  text-decoration: underline;
-}
-
-/* .contentbnb
-{
-  max-width: var(--siteWidth);
-  margin: auto;
-  padding: 6px;
-  line-height: 1.4;
-} */
-
 .justify
 {
   max-width: var(--siteWidth);
   margin: auto;
-  padding: 6px;
+  padding: 12px;
   line-height: 1.4;
   text-align: justify;
-
-  font-size: 24px;
 }
 
 .centered
@@ -197,45 +120,21 @@ a.bnb:hover
   padding-bottom: 32px;
 }
 
-.centeredheading
-{
-  text-align: center;
-  font-size: 42px;
-  font-weight: bold;
-  padding-top: 16px;
-}
-
-.floatLeft
-{
-  float: left;
-  padding-right: 20px;
-}
-
-.rightText
-{
-
-  line-height: 1.8;
-}
-
-/* .justify
-{
-  text-align: justify;
-} */
-
-.whiteText
+whiteText
 {
   color: white;
 }
 
-.yellowText
+yellowText
 {
   color: var(--yellowCol);
 }
 
-.bottomPad
+.padding
 {
-  padding-bottom: 32px;
+  padding: 20px;
 }
+
 
 /* for swapping images based on mobile */
 .image-gallery
